cmake_minimum_required(VERSION 3.23)
project(JITB2CPP)

set(CMAKE_CXX_STANDARD 23)

add_executable(JITB2CPP Miscellaneous/main.cpp)
add_executable(JITB2CPP_0 Miscellaneous/ForEachLoop.cpp)
add_executable(JITB2CPP_1 Miscellaneous/Swapping.cpp)
add_executable(JITB2CPP_2 Miscellaneous/MaxMinIntValues.cpp)
add_executable(JITB2CPP_3 Miscellaneous/KadaneAlgo.cpp)
add_executable(JITB2CPP_4 OOPs/Demo.cpp)
add_executable(JITB2CPP_5 OOPs/BasicOOPs.cpp)
add_executable(JITB2CPP_6 OOPs/OOPsWithConstructor.cpp)
add_executable(JITB2CPP_7 OOPs/NameClashes.cpp)
add_executable(JITB2CPP_8 OOPs/CopyConstructor.cpp)
add_executable(JITB2CPP_9 OOPs/Destructor.cpp)
add_executable(JITB2CPP_10 OOPs/Encapsulation.cpp)
add_executable(JITB2CPP_11 OOPs/Inheritance.cpp)
add_executable(JITB2CPP_12 OOPs/Overloading.cpp)
add_executable(JITB2CPP_13 OOPs/Overriding.cpp)
add_executable(JITB2CPP_14 OOPs/DataAbstraction.cpp)
add_executable(JITB2CPP_15 OOPs/Association.cpp)
add_executable(JITB2CPP_16 OOPs/ExceptionHandling.cpp)
add_executable(JITB2CPP_17 OOPs/FriendClass.cpp)
add_executable(JITB2CPP_18 OOPs/FriendFunction.cpp)
add_executable(JITB2CPP_19 Miscellaneous/DynamicMemoryAllocation.cpp)
add_executable(JITB2CPP_20 Files/ReadWriteFiles.cpp)
add_executable(JITB2CPP_21 Files/ReadData.cpp)
add_executable(JITB2CPP_22 Files/StoryToFileAndBack.cpp)
add_executable(JITB2CPP_23 Miscellaneous/MergeTwoSortedArrays.cpp)
add_executable(JITB2CPP_24 Miscellaneous/TreeDataStructureTraversal.cpp)
add_executable(JITB2CPP_25 Miscellaneous/RatInAMaze.cpp)
